# ttmp32gme

./: .dockerignore  .flake8  .gitignore  .includepath  .pre-commit-config.yaml  .project  =6.0.0  CONTRIBUTING.md  Dockerfile  E2E_TEST_SCRIPTS.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  TODO.md  build-docker.sh  buildit.pl  docker-compose.yml  docker-push.sh  jest.config.js  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  requirements-test.txt  requirements.txt  run.sh  run_e2e_tests.sh  run_e2e_tests_locally.sh  setup_e2e_environment.sh  ttmp32gme-linux.spec  ttmp32gme-macos.spec  ttmp32gme-windows.spec  ttmp32gme.py
.github/: copilot-instructions.md
.github/scripts/: install-chrome-windows.ps1  install-ffmpeg-linux.sh  install-ffmpeg-macos.sh  install-ffmpeg-windows.ps1  install-tttool-linux.sh  install-tttool-macos.sh  install-tttool-windows.ps1
.github/workflows/: README.md  copilot-setup-steps.yml  docker-build-test.yml  docker-pr.yml  docker-release.yml  docs.yml  e2e-tests.yml  ghcr-cleanup.yml  javascript-tests.yml  pre-commit.yml  python-tests.yml  release-executables.yml  update-uv-lock.yml
Test_Album_For_Screenshot/: Test_Album.codes.yaml  Test_Album.gme  Test_Album.yaml
__tests__/: README.md  print.test.js
docs/: .gitignore  Makefile  README.md  SECURITY.md  building-executables.md  conf.py  contributing.md  development.md  getting-started.md  index.md  installation.md  migration.md  print-configuration.md  troubleshooting.md  usage.md
docs/api/: db_handler.md  file_handler.md  index.md  print_handler.md  ttmp32gme.md  tttool_handler.md
lib/fine-uploader/: dnd.js  dnd.js.map  dnd.min.js  dnd.min.js.map
lib/mac/: libcharset.1.0.0.dylib  libgmp.10.dylib  libiconv.2.4.0.dylib  libiconv.dylib  libz.1.2.11.dylib
resources/build_assets/docker/: Dockerfile  README.md  docker-entrypoint.sh
resources/build_assets/mac/ttmp32gme.app/Contents/: Info.plist
resources/build_assets/mac/ttmp32gme.app/Contents/Resources/: AppSettings.plist  script
src/: base.html  config.html  config.sqlite  help.html  library.html  mp32gme.pl  ttmp32gme.pl  update_version.pl  upload.html
src/TTMp32Gme/: DbUpdate.pm  LibraryHandler.pm  PrintHandler.pm  TttoolHandler.pm
src/assets/css/: fine-uploader-new.min.css  fine-uploader-new.min.css.map  print.css
src/assets/js/: jquery-ui.min.js  jquery.fine-uploader.min.js  jquery.fine-uploader.min.js.map  jquery.matchHeight-min.js  print.js
src/templates/: base.html  config.html  pdf.html  print.html  printing_contents.html
src/ttmp32gme/: __init__.py  __main__.py  _version.py  db_handler.py  db_update.py  gui_handler.py  library_handler.py  log_handler.py  print_handler.py  ttmp32gme.py  tttool_handler.py
tests/: README.md  test_sql_injection.py  test_web_frontend.py
tests/e2e/: conftest.py  test_comprehensive.py  test_download_gme.py  test_download_oid_images.py  test_tttool_handler.py  test_upload_ogg_files.py  test_web_interface.py
tests/fixtures/: download_test_files.py
tests/unit/: __init__.py  test_concurrent_db_access.py  test_config_log_level.py  test_create_library_integration.py  test_custom_paths.py  test_db_handler.py  test_db_update.py  test_debug_logging.py  test_download_oid_images.py  test_file_handler.py  test_library_handler.py  test_log_handler.py  test_log_level_change.py  test_print_handler.py  test_print_handler_integration.py  test_production_flag.py  test_sql_injection_protection.py  test_tttool_handler.py  test_unicode_fix.py  test_verbose_logging.py
tools/: mp3split.sh
