[project]
name = "ttmp32gme"
dynamic = ["version"]
description = "TipToi MP3 to GME converter - Python backend"
requires-python = ">=3.11"
readme = "README.md"
license = {file = "LICENSE"}

dependencies = [
    "flask>=3.0.0",
    "werkzeug>=3.0.0",
    "packaging>=23.0",
    "mutagen>=1.47.0",
    "pillow>=10.0.0",
    "requests>=2.31.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-html>=4.0.0",
    "selenium>=4.15.0",
    "pyyaml",
]
dev = [
    "pre-commit>=3.5.0",
    "black>=24.0.0",
    "flake8>=7.0.0",
    "flake8-bugbear>=24.0.0",
    "isort>=5.13.0",
]

[project.scripts]
ttmp32gme = "ttmp32gme.ttmp32gme:main"

[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_file = "src/ttmp32gme/_version.py"

[tool.setuptools.package-data]
ttmp32gme = ["config.sqlite"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "e2e: End-to-end tests using Selenium (deselect with '-m \"not e2e\"')",
    "slow: Slow tests (deselect with '-m \"not slow\"')",
]

addopts = [
    "--verbose",
    "--cov=ttmp32gme",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | node_modules
  | __pycache__
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["build/*", "dist/*", "node_modules/*", "__pycache__/*", ".venv/*"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "E501", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".eggs",
    "*.egg",
    ".venv",
    "venv",
    "node_modules",
]

[tool.uv]
# Using same dependencies as project.optional-dependencies.test
